What..........
                UI
                   - Changed colors
                   - Refactored the main UI
                   - Cleared focus
                   - Fixed verbatims
                Feature
                   - Implemented an exit feature which will prevent then splash screen to be displayed each time, etc.

________________________________________________


Date..........   16/03/2016
What..........
                State notifications
                    - Refactored notifications by vibrations
                    - The state of the app is notified by light and notifications
                    - Updated the GUI
                Misc
                    - Now the back button is for exit, press home to put the app in background / hide it
                    - Refactoring of some constants
                    - Fixed verbatims


________________________________________________


Date..........  16/03/2016
What..........
                Repeat
                    - Endless repeat with warning in an alert dialog
                Notifications
                    - Start the activity if we click on the notifications (except "new click")
                Languages
                    - French support
                Documentation
                    - Generate Javadoc as HTML

________________________________________________


Date..........   16/03/2016
What..........
                Languages
                    - The error message about SU missing is displayed according to i18n

________________________________________________


Date..........   16/03/2016
What..........
                GUI
                    - More code about TranslucentActivity and feature about point selection on the screen

________________________________________________


Date..........   /  /
What..........


________________________________________________


Date..........   /  /
What..........


________________________________________________